--- a/index.html
+++ b/index.html
@@ -11,18 +11,43 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="intro">
             <h1>Welcome To</h1>
             <h1><span class="name_highlight">Durjoy's</span> World</h1>
             <h3>Professional Web Developer</h3>
             <p>I am Anam Mofazzal Durjoy. My study life was kind of inconsistence in a sense of changing school very frequently. I started my primary education at govt. primary school near my house. After 3 years, i joined another school in Khetlal sub-district. I completed my 5th level in there. Then i joined a cadet coaching to get admitted into Cadet college. But unfortunately i couldn't make it happened. Later i joined another private school in Bogra. After one year, i got chance in DRMC and i admitted there in class 8. I studied there till completion of my HSC. Now I am graduated from East West University.</p>
-            <button> Hire Me</button>
+            <a target ="_blank" href="https://github.com/durjoy6405" class="hire-button"> Hire Me</a>
         </div>
         <div  class="intro">
             <img src="images/jhankar.png" alt="">
         </div>
     </section>
-    
+    <section class="dream-big">
+        <div class="intro">
+            <img src="images/jhankar2.png" alt="">
+
+        </div>
+        <div class="intro">
+            <h2>Dream Big</h2>
+            <h3>Become a Great Developer</h3>
+            <p>I already have learned basic HTML and CSS. I can develop some naive website. But don't worry. I am going to learn more advanced topic and technology about web development. And after that my goal is to build some professionals websites and secure a job. </p>
+            <a target ="_blank" href="https://github.com/durjoy6405" class="hire-button"> Download Resume</a>
+        </div>
+    </section>
+    <section class="experience">
+        <h2>Experiences</h2>
+        <div id = "full" class="intro single-experience">
+            <h2>Full Stack Web Developer</h2>
+            <h3 class="name_highlight">2021 - Present | Pro Level Web Dev</h3>
+            <p>I am the master of html, css and javascript. I know whatis neeeded to make an website attractive and efficient. I went beyond with the most popular javascript framework named as  node.js and react.js. I even know about the server maintainance, deployment and backend issues. I can promise to you that i can give you 100% of satisfaction </p>
+        </div>
+        <div id="baby" class="intro single-experience">
+            <h2>Baby Web Developer</h2>
+            <h3 class="name_highlight">2021 - Present | Pro Level Web Dev</h3>
+            <p>I am the master of html, css and javascript. I know whatis neeeded to make an website attractive and efficient. I went beyond with the most popular javascript framework named as  node.js and react.js. I even know about the server maintainance, deployment and backend issues. I can promise to you that i can give you 100% of satisfaction </p>
+        </div>
+    </section>
+    <footer>All Rights are Reserved, 2023</footer>
 </body>
 </html>
